privacy policy page completed

--- a/css/legal.css
+++ b/css/legal.css
@@ -73,6 +73,10 @@
   }
 }
 
+.subparagraphs__list {
+  list-style: disc;
+  padding-left: 2rem;
+}
 /* FIXED IMAGE */
 .fixedimg {
   background-image: url(../img/avif/legalnotice-forn.avif);
