--- a/css/legal.css
+++ b/css/legal.css
@@ -6,7 +6,7 @@
 }
 .legal__text {
   width: 95%;
-  /* margin: 4.5rem auto; */
+  margin: 4.5rem auto;
   display: flex;
   flex-direction: column;
   align-content: center;
